# cmd/docs/swagger.json
@@ -1,4 +1,10 @@
 {
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "This service manages Identity and Access Management",
@@ -24,6 +30,26 @@
                 }
             }
         },
+        "/athena/v1/oauth/clients": {
+            "post": {
+                "tags": [
+                    "OAuth Client"
+                ],
+                "summary": "Create an OAuth Client",
+                "parameters": [
+                    {
+                        "description": "Body to create a client",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/oauth.ClientRegistrationRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/athena/v1/policies/{id}": {
             "get": {
                 "tags": [
@@ -44,6 +70,71 @@
         }
     },
     "definitions": {
+        "oauth.ClientRegistrationRequest": {
+            "type": "object",
+            "properties": {
+                "client_name": {
+                    "type": "string"
+                },
+                "client_uri": {
+                    "type": "string"
+                },
+                "contacts": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "grant_types": {
+                    "description": "authorization_code (default), implicit, password, client_credentials, refresh_token",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "jwks": {
+                    "type": "string"
+                },
+                "jwks_uri": {
+                    "type": "string"
+                },
+                "logo_uri": {
+                    "type": "string"
+                },
+                "policy_uri": {
+                    "type": "string"
+                },
+                "redirect_uris": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "response_types": {
+                    "description": "code (default), token",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "scope": {
+                    "type": "string"
+                },
+                "software_id": {
+                    "type": "string"
+                },
+                "software_version": {
+                    "type": "string"
+                },
+                "token_endpoint_auth_method": {
+                    "description": "Values\nnone - public client aka no secret\nclient_secret_post - uses http post params\nclient_secret_basic - uses http basic",
+                    "type": "string"
+                },
+                "tos_uri": {
+                    "type": "string"
+                }
+            }
+        },
         "responses.HealthResponse": {
             "type": "object",
             "properties": {
